// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileDocumentHandler applies anchor commit correctly 1`] = `
{
  "anchorProof": {
    "chainId": "fakechain:123",
  },
  "anchorStatus": 3,
  "content": {
    "much": "data",
    "very": "content",
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1615799679,
      "type": 0,
    },
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts44jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1615799679,
      "type": 1,
    },
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts55jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1615799679,
      "type": 2,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
  },
  "signature": 2,
  "type": 0,
}
`;

exports[`TileDocumentHandler applies commit made using an old key if it is applied within the revocation period 1`] = `
{
  "anchorStatus": 0,
  "content": {
    "much": "data",
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1647037687,
      "type": 0,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
  },
  "signature": 2,
  "type": 0,
}
`;

exports[`TileDocumentHandler applies genesis commit correctly 1`] = `
{
  "anchorStatus": 0,
  "content": {
    "much": "data",
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
  },
  "signature": 2,
  "type": 0,
}
`;

exports[`TileDocumentHandler applies signed commit correctly 1`] = `
{
  "anchorStatus": 0,
  "content": {
    "much": "data",
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts44jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 1,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
  },
  "next": {
    "content": {
      "much": "data",
      "very": "content",
    },
    "metadata": {
      "controllers": [
        "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
      ],
    },
  },
  "signature": 2,
  "type": 0,
}
`;

exports[`TileDocumentHandler multiple consecutive updates 1`] = `
{
  "anchorStatus": 0,
  "content": {
    "test": "data",
  },
  "log": [
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts44jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 1,
    },
    {
      "cid": {
        "/": "bafybeig6xv5nwphfmvcnektpnojts55jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 1,
    },
  ],
  "metadata": {
    "controllers": [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
  },
  "next": {
    "content": {
      "other": {
        "obj2": "fefe",
      },
    },
    "metadata": {
      "controllers": [
        "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
      ],
    },
  },
  "signature": 2,
  "type": 0,
}
`;
